cmake_minimum_required(VERSION 3.19)
project(More_Effective_CPP2_0)

set(CMAKE_CXX_STANDARD 17)

add_executable(More_Effective_CPP2_0 main.cpp 01.h 02.h 03.h 04.h 05.h 06.h 07.h 08.h 09.h 10.h 11.h 12.h 13.h 14.h 15.h 16.h 17.h 18.h 19.h 20.h 21.h 22.h 23.h 24.h 25.h 26.h 27.h 28.h 29.h 30.h 31.h 32..h 33.h 34.h 35.h)